03-custom-application/yaml-solutions/base/greeting-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeting-deployment
  labels:
    app: greeting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeting
  template:
    metadata:
      labels:
        app: greeting
    spec:
      containers:
      - name: greeting
        image: localhost:5003/development/service-greeting:latest
        volumeMounts:
        - name: config
          mountPath: "/config"
          readOnly: true
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /live
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 15
        resources:
          limits:
            cpu: 100m
            memory: "200Mi"
          requests:
            cpu: 50m
            memory: "100Mi"
      volumes:
        - name: config
          configMap:
            name: config
