03-custom-application/yaml-solutions/base/greeting-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeting-service
spec:
  selector:
    app: greeting
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
