03-custom-application/yaml-solutions/base/greeting-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greeting-ingress 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /greeting/(.*)
        pathType: Prefix
        backend:
          service:
            name: greeting-service
            port:
              number: 8080
